Adding stocks to dashboard

--- a/ticker/client/dashboard.html
+++ b/ticker/client/dashboard.html
@@ -38,6 +38,16 @@
     {{#each stocks}}
       {{> stock}}
     {{/each}}
+    {{#if adding_stock}}
+    <div class="new_stock">
+      <input type="text" class="symbol" value="POOP" />
+      <input type="text" class="shares" value="1" />
+      <input type="text" class="cost_basis" value="0.0" />
+      <input type="button" class="submit" value="Submit" />
+    </div>
+    {{else}}
+      <input type="button" class="add_stock" value="Add Stock" />
+    {{/if}}
   </div>
 </template>
 
