[minor] Added title to dashboard

--- a/ticker/client/dashboard.html
+++ b/ticker/client/dashboard.html
@@ -36,6 +36,7 @@
 
 <template name="stock_list">
   <div class="stock_list">
+    <h1>{{title}}</h1>
     <table id="portfolio">
     {{#each stocks}}
       {{> stock}}
