--- a/ticker/client/dashboard.html
+++ b/ticker/client/dashboard.html
@@ -20,18 +20,21 @@
 </template>
 
 <template name="user_list">
-  <div class="user_list">
+  <h1>{{title}}</h1>
+  <table id="portfolio">
     {{#each users}}
       {{> user}}
     {{/each}}
-  </div>
+  </table>
 </template>
 
 <template name="user">
-  <div class="user">
-    <span class="name">{{name}}</span>
-    <span class="value">{{totalValue}}</span>
-  </div>
+  <tr class="stock">
+    <td><span class="symbol">{{name}}</span></td>
+    <td class="numerical"><span class="price">{{toDollars currentValue}}</span></td>
+    <td class="numerical"><span class="delta {{updown}} numerical secondary">{{toGain deltaAbsolute}}</span></td>
+    <td class="numerical"><span class="deltaPercent {{updown}} numerical secondary">({{toPercent deltaRelative}})</span></td>
+  </tr>
 </template>
 
 <template name="stock_list">
