--- a/ticker/client/dashboard.html
+++ b/ticker/client/dashboard.html
@@ -29,16 +29,17 @@
 </template>
 
 <template name="user">
-  <tr class="stock">
+  <tr class="dashboard clickable">
     <td><span class="symbol">{{name}}</span></td>
     <td class="numerical"><span class="price">{{toDollars currentValue}}</span></td>
-    <td class="numerical"><span class="delta {{updown}} numerical secondary">{{toGain deltaAbsolute}}</span></td>
-    <td class="numerical"><span class="deltaPercent {{updown}} numerical secondary">({{toPercent deltaRelative}})</span></td>
+    <td class="numerical"><span class="delta {{updown}} secondary">{{toGain deltaAbsolute}}</span></td>
+    <td class="numerical"><span class="{{updown}} secondary">({{toPercent deltaRelative}})</span></td>
   </tr>
 </template>
 
 <template name="stock_list">
   <div class="stock_list">
+    <a href="/">Home</a>
     <h1>{{title}}</h1>
     <table id="portfolio">
     {{#each stocks}}
@@ -49,11 +50,11 @@
 </template>
 
 <template name="stock">
-  <tr class="stock">
+  <tr class="dashboard">
     <td><span class="symbol">{{symbol}}</span></td>
     <td class="numerical"><span class="price">{{toDollars price}}</span></td>
-    <td class="numerical"><span class="delta {{updown}} numerical secondary">{{toGain deltaAbsolute}}</span></td>
-    <td class="numerical"><span class="deltaPercent {{updown}} numerical secondary">({{toPercent deltaRelative}})</span></td>
+    <td class="numerical"><span class="delta {{updown}} secondary">{{toGain deltaAbsolute}}</span></td>
+    <td class="numerical"><span class="{{updown}} secondary">({{toPercent deltaRelative}})</span></td>
   </div>
 </template>
 
