--- a/ticker/client/stocks.html
+++ b/ticker/client/stocks.html
@@ -16,7 +16,7 @@
     <td class="numerical"><span class="price">{{toDollars price}}</span></td>
     <td class="numerical"><span class="delta {{updown}} secondary">{{toGain deltaAbsolute}}</span></td>
     <td class="numerical"><span class="{{updown}} secondary">({{toPercent deltaRelative}})</span></td>
-    <td><span class="owners tertiary">{{ownersString}}</span></td>
+    <td><span class="owners tertiary">{{{ownersString}}}</span></td>
   </tr>
 </template>
 
