Basic typeahead implemented
Notes:

This is currently backed by the Stocks collection, which is the set of
stocks that users collectively own.  This will soon be replaced by the
full list of stocks traded.

Style changes to follow, as bootstrap CSS is overriding some of the
styles

--- a/ticker/client/stocks.html
+++ b/ticker/client/stocks.html
@@ -23,7 +23,7 @@
 <template name="stock_control">
   
   <div id="new_stock" style="display:none;">
-    <input type="text" class="symbol" placeholder="Symbol (e.g., MSFT)" autofocus />
+    <input id="new_symbol" type="text" class="symbol" placeholder="Symbol (e.g., MSFT)" autofocus />
     <input type="text" class="shares" placeholder="# shares" />
     <input type="text" class="cost_basis" placeholder="cost basis" />
     <input type="button" class="submit" value="Buy!" />
