Fixed typeahead to search against symbol and name; did some database.js cleaning
Also cleaned up syntax here and there

--- a/ticker/client/stocks.html
+++ b/ticker/client/stocks.html
@@ -32,3 +32,9 @@
   <input type="button" id="add_stock" value="Add Stock" />
 
 </template>
+
+<template name="stock_typehead">
+
+  <p>{{symbol}}: {{name}}<p>
+
+</template>
