--- a/ticker/client/index.html
+++ b/ticker/client/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>Ticker</title>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
