Calculating previous close price

--- a/ticktock/client/dashboard/dash_stocks.html
+++ b/ticktock/client/dashboard/dash_stocks.html
@@ -16,6 +16,7 @@
   <tr class="stockRow">
     <td><span class="symbol">{{symbol}}</span></td>
     <td class="numerical"><span class="price">{{toDollars priceNow}}</span></td>
+    <td class="numerical"><span class="asOf">{{toDollars priceLastClose}}</span></td>
   </tr>
 
 </template>
