Basic slider: VERY SLOW

--- a/ticktock/client/index.html
+++ b/ticktock/client/index.html
@@ -7,4 +7,7 @@
   <div id="wrapper">
     {{#isolate}} {{renderPage}} {{/isolate}}
   </div>
+  <div id="clock">
+    {{#isolate}} {{> clock}} {{/isolate}}
+  </div>
 </body>
