--- a/ticktock/client/dashboard/dash_stocks.html
+++ b/ticktock/client/dashboard/dash_stocks.html
@@ -14,9 +14,11 @@
 <template name="stock_row">
   <tr class="stockRow">
     <td><span class="symbol">{{symbol}}</span></td>
-    <td class="numerical"><span class="price">{{toDollars priceNow}}</span></td>
+
+    <td class="numerical"><span class="price">{{#isolate}}{{currentPrice}}{{/isolate}}</span></td>
     <td class="numerical"><span class="delta {{updown}} secondary">{{toDelta todayGain}}</span></td>
     <td class="numerical"><span class="delta {{updown}} secondary">{{toPercent todayGainRelative}}</span></td>
+
   </tr>
 
 </template>
