--- a/ticktock/client/dashboard/dash_stocks.html
+++ b/ticktock/client/dashboard/dash_stocks.html
@@ -15,9 +15,11 @@
   <tr class="stockRow">
     <td><span class="symbol">{{symbol}}</span></td>
 
-    <td class="numerical"><span class="price">{{#isolate}}{{currentPrice}}{{/isolate}}</span></td>
-    <td class="numerical"><span class="delta {{updown}} secondary">{{toDelta todayGain}}</span></td>
-    <td class="numerical"><span class="delta {{updown}} secondary">{{toPercent todayGainRelative}}</span></td>
+    {{#isolate}}
+    <td class="numerical"><span class="price">{{currentPrice}}</span></td>
+    <td class="numerical"><span class="delta {{updown}} secondary">{{toDelta currentGain}}</span></td>
+    <td class="numerical"><span class="delta {{updown}} secondary">{{toPercent currentGainRelative}}</span></td>
+    {{/isolate}}
 
   </tr>
 
