--- a/ticktock/client/dashboard/dash_stocks.html
+++ b/ticktock/client/dashboard/dash_stocks.html
@@ -8,6 +8,9 @@
       {{>stock_row}}
     {{/each}}
     </table>
+    {{#each stats}}
+    <br />{{time}} {{price}}
+    {{/each}}
   </div>
 </template>
 
@@ -16,9 +19,10 @@
     <td><span class="symbol">{{symbol}}</span></td>
 
     {{#isolate}}
-    <td class="numerical"><span class="price">{{currentPrice}}</span></td>
+    <td class="numerical"><span class="price">{{toDollars currentPrice}}</span></td>
     <td class="numerical"><span class="delta {{updown}} secondary">{{toDelta currentGain}}</span></td>
     <td class="numerical"><span class="delta {{updown}} secondary">{{toPercent currentGainRelative}}</span></td>
+    <td class="whatever">{{toJSON latestStat}}</td>
     {{/isolate}}
 
   </tr>
