Finally, publishing just works

--- a/ticktock/client/dashboard/dash_stocks.html
+++ b/ticktock/client/dashboard/dash_stocks.html
@@ -10,7 +10,7 @@
     </table>
     <ol>
     {{#each quotes}}
-    <li>{{toLocalTime time}} {{toDollars price}}</li>
+    <li>{{type}} {{toLocalTime time}} {{toDollars price}}</li>
     {{/each}}
     </ol>
   </div>
