Quotes always include a last_price now

--- a/ticktock/client/dashboard/stocks.html
+++ b/ticktock/client/dashboard/stocks.html
@@ -24,7 +24,7 @@
     <td class="numerical"><span class="price">{{toDollars currentPrice}}</span></td>
     <td class="numerical"><span class="delta {{updown}} secondary">{{toDelta currentGain}}</span></td>
     <td class="numerical"><span class="delta {{updown}} secondary">{{toPercent currentGainRelative}}</span></td>
-    <td class="whatever">{{toJSON latestStat}}</td>
+    <td class="numerical"><span class="price">{{toDollars last_price}}</td>
     {{/isolate}}
 
   </tr>
