--- a/ticktock/client/dashboard/investors.html
+++ b/ticktock/client/dashboard/investors.html
@@ -18,12 +18,12 @@
 
 <template name="investor_row">
   <tr class="stockRow">
-    <td><span class="name">{{name}}</span></td>
+    <td><span class="name"><a href='/portfolio/{{_id}}'>{{name}}</a></span></td>
 
     {{#isolate}}
-    <td class="numerical"><span class="price">{{toDollars currentValue}}</span></td>
-    <td class="numerical"><span class="delta {{updown}} secondary">{{toDelta currentGain}}</span></td>
-    <td class="numerical"><span class="delta {{updown}} secondary">{{toPercent currentGainRelative}}</span></td>
+    <td class="numerical"><span class="price">{{toDollars value}}</span></td>
+    <td class="numerical"><span class="delta {{updown}} secondary">{{toDelta gain}}</span></td>
+    <td class="numerical"><span class="delta {{updown}} secondary">{{toPercent gainRelative}}</span></td>
     {{/isolate}}
 
   </tr>
