--- a/ticktock/client/dashboard/stocks.html
+++ b/ticktock/client/dashboard/stocks.html
@@ -2,17 +2,14 @@
 <template name="dashboard_stocks">
   <div class="stockList">
     <a href="/">Home</a>
-    <h1>Stocks</h1>
+    <h1>{{title}}</h1>
     <table class="dashboard">
+    {{#isolate}}
     {{#each stocks}}
       {{>stock_row}}
     {{/each}}
+    {{/isolate}}
     </table>
-    <ol>
-    {{#each quotes}}
-    <li>{{type}} {{toLocalTime time}} {{toDollars price}}</li>
-    {{/each}}
-    </ol>
   </div>
 </template>
 
@@ -21,10 +18,10 @@
     <td><span class="symbol">{{symbol}}</span></td>
 
     {{#isolate}}
-    <td class="numerical"><span class="price">{{toDollars currentPrice}}</span></td>
-    <td class="numerical"><span class="delta {{updown}} secondary">{{toDelta currentGain}}</span></td>
-    <td class="numerical"><span class="delta {{updown}} secondary">{{toPercent currentGainRelative}}</span></td>
-    <td class="numerical"><span class="price">{{toDollars last_price}}</td>
+    <td class="numerical"><span class="price">{{toDollars price}}</span></td>
+    <td class="numerical"><span class="delta {{updown}} secondary" alt="{{toDollars last_price}}">{{toDelta gain}}</span></td>
+    <td class="numerical"><span class="delta {{updown}} secondary">{{toPercent gainRelative}}</span></td>
+    <td><span class="owners tertiary">{{#if owners}}Owned by {{/if}}{{#each owners}}<span class='owner'><a href='/portfolio/{{_id}}'>{{name}}</a></span>{{/each}}</td>
     {{/isolate}}
 
   </tr>
