--- a/ticktock/client/dashboard/stocks.html
+++ b/ticktock/client/dashboard/stocks.html
@@ -29,7 +29,6 @@
 
 </template>
 
-
 <template name="stock_control">
   
   <div id="new_stock" style="display:none;">
@@ -43,4 +42,8 @@
 
 </template>
 
+<template name="stock_typeahead">
 
+  <p><strong>{{symbol}}</strong> {{name}}<p>
+
+</template>
