Added stock mode for chart

--- a/ticktock/client/chart/chart.html
+++ b/ticktock/client/chart/chart.html
@@ -6,12 +6,6 @@
   </div>
   {{/constant}}
 
-  <ol>
-    {{#each quotes}}
-    <li>{{toLocalTime time}} {{toDollars price}} {{type}} {{symbol}}</li>
-    {{/each}}
-  </ol>
-
 </template>
 
 <template name="chart_circles_d3">
@@ -31,7 +25,24 @@
       <div class="cap">
         <div class="head" style="background-image:url('{{picture}}')"></div>
         <div class="name">{{name}}</div>
-        <div class="gain {{updown}}">{{toPercent deltaRelative}}</div>
+        <div class="gain {{updown}}">{{toPercent gainRelative}}</div>
+      </div>
+    </div>
+  </div>
+
+</template>
+
+<template name="chart_circles_row_stock">
+
+  <div class="chartRow">
+    <div class="canvas">
+      <div class="line"></div>
+      <div class="origin"></div>
+      <div class="bar"></div>
+      <div class="cap">
+        <div class="head" style="background-image:url('http://www.bing.com/th?q={{symbol}}%20stock%20logo&h=80&w=80')"></div>
+        <div class="name">{{symbol}}</div>
+        <div class="gain {{updown}}">{{toPercent gainRelative}}</div>
       </div>
     </div>
   </div>
