--- a/ticktock/client/clock/clock.html
+++ b/ticktock/client/clock/clock.html
@@ -1,4 +1,4 @@
 <template name="clock">
     {{#constant}}<input type="range" class="slider" min="{{sliderSize}}" max="{{minDelay}}" value="-{{delay}}" />{{/constant}}
-    <div class="timeNow">{{toLocalTime timeNow}} (-{{delay}} seconds)</div>
+    <div class="timeNow">{{toLocalTime timeNow}} ({{toRelativeTime timeNow}})</div>
 </template>
