--- a/ticktock/client/clock/clock.html
+++ b/ticktock/client/clock/clock.html
@@ -1,4 +1,6 @@
 <template name="clock">
+  <div id="clock">
     {{#constant}}<input type="range" class="slider" min="{{sliderSize}}" max="{{minDelay}}" value="-{{delay}}" />{{/constant}}
     <div class="timeNow">{{toLocalTime timeNow}} ({{toRelativeTime timeNow}})</div>
+  </div>
 </template>
