Limit to one trading day (hacky)

--- a/ticktock/client/graphs/twopane.html
+++ b/ticktock/client/graphs/twopane.html
@@ -19,6 +19,7 @@
 
 
 <template name="social">
+  <a href="/lines">All Stocks</a>
   <div class='social'>
   {{#each investors}}
     <a href="/lines/{{_id}}">
