--- a/ticktock/client/overview/overview.html
+++ b/ticktock/client/overview/overview.html
@@ -27,6 +27,7 @@
 
 <template name="portfolio_tiles">
   <div class='tiles'>
+    <h1>Biggest Movers</h1>
   </div>
 </template>
 
@@ -41,6 +42,7 @@
 
 <template name="competition_leaderboard">
   <div class='leaderboard'>
+  <h1>Leaderboard</h1>
   {{#each investors}}
     <a href="/portfolio/{{_id}}">
       <div class='user' current='{{current}}'>
