Add stock button (doesn't do anything yet)

--- a/ticktock/client/overview/overview.html
+++ b/ticktock/client/overview/overview.html
@@ -37,7 +37,9 @@
 </template>
 
 <template name="portfolio_buy">
-
+  <div class='add'>
+    + Add Stock
+  </div>
 </template>
 
 <template name="competition_leaderboard">
