--- a/ticktock/client/index.html
+++ b/ticktock/client/index.html
@@ -1,6 +1,8 @@
 <head>
   <title>ticktock</title>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css' rel='stylesheet' type='text/css'>
+  <script src='http://code.jquery.com/ui/1.10.3/jquery-ui.js'></script>
 </head>
 
 <body>
