Working time travel

--- a/ticktock/client/overview/overview.html
+++ b/ticktock/client/overview/overview.html
@@ -23,6 +23,9 @@
     <h1>Time Travel</h1>
     {{#constant}}<div id="timeSlider"></div>{{/constant}}
     <div class="clock"><span class="start">{{toLocalTime start}}</span> to <span class="end">{{toLocalTime end}}</span></div>
+    <div class="presets">
+      <button class="today">Today</button>
+      <button class="yesterday">Yesterday</button>
   </div>
 </template>
 
