--- a/ticktock/client/overview/overview.html
+++ b/ticktock/client/overview/overview.html
@@ -37,11 +37,17 @@
 
 
 <template name="visualization_lines">
+  {{#constant}}
   <div class='lines'>
     <svg class='lineChart'>
       <line class='xAxis'></line>
     </svg>
   </div>
+  {{/constant}}
+  {{#if loading}}
+  <div class="loading">Loading... </div>
+  {{/if}}
+
 </template>
 
 <template name="portfolio_tiles">
