Line for last closing price

--- a/ticktock/client/overview/overview.html
+++ b/ticktock/client/overview/overview.html
@@ -44,8 +44,8 @@
   <div class='lines'>
     <svg class='lineChart'>
       <g class='grid major'></g>
-      <g class='grid minor'></g>
-      <g class='xAxis'></g>
+      <g class='axis y'></g>
+      <g class='axis x'></g>
     </svg>
   </div>
   {{/constant}}
