--- a/ticktock/client/overview/overview.html
+++ b/ticktock/client/overview/overview.html
@@ -26,6 +26,8 @@
     {{#constant}}<div id="timeSlider"></div>{{/constant}}
     <div class="clock"><span class="start">{{toLocalTime start}}</span> to <span class="end">{{toLocalTime end}}</span></div>
     <div class="presets">
+      <button class="play">></button>
+      <button class="pause">||</button>
       <button class="yesterday">Yesterday</button>
       <button class="today">Today</button>
       <button class="both">Both</button>
